# read-lua-5.4.6

./: .clang-format  .gitignore  CMakeLists.txt  LuaConfig.cmake.in  Makefile  code_dump.lua  dump.sh  luac.out
ctest/: CMakeLists.txt  p1_test.c
ltest/: pp.lua  test.lua  tt.lua
readdoc/: debug.md  qa.md  reference.md  thought.md  tools.md
readdoc/ebnf/: ebnf.lua  sample.ebnf
src/: CMakeLists.txt  Makefile  lapi.c  lapi.h  lauxlib.c  lauxlib.h  lbaselib.c  lcode.c  lcode.h  lctype.h  ldblib.c  ldebug.c  ldebug.h  ldo.c  ldo.h  lfunc.c  lfunc.h  lgc.c  lgc.h  linit.c  ljumptab.h  llex.c  llex.h  lmem.c  lmem.h  loadlib.c  lobject.c  lobject.h  lopcodes.c  lopcodes.h  lparser.c  lparser.h  lstate.c  lstate.h  lstring.c  lstring.h  ltable.c  ltable.h  ltm.c  ltm.h  (+9 more)
tools/protodump/: build_proto.lua  ptable.lua  readme
